Distributed/deploy/kind/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commerce
  labels:
    app.kubernetes.io/part-of: commerce
